Fixed issue with footer on mobile

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -13,3 +13,11 @@
   margin-block-start: 0.5em;
   margin-block-end: 0;
 }
+
+@media only screen 
+and (max-device-width : 768px) {
+  .Footer {
+    width: 100%;
+    padding: 1em 0;
+  }
+}
